--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,14 +7,42 @@
 -->
 
 <p>
-  <strong>title:</strong>
+  <strong>Title:</strong>
   <%= @article.title %><br>
 </p>
  
 <p>
-  <strong>text:</strong>
+  <strong>Text:</strong>
   <%= @article.text %><br>
 </p>
- 
+
+<h2>Comments</h2>
+<% @article.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter  %><br>
+    <%= f.text_field :commenter  %><br>
+  </p>
+  <p>
+    <%= f.label :body  %><br>
+    <%= f.text_area :body  %><br>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+  
 <%= link_to 'Back', articles_path %>
 <%= link_to 'Edit', edit_article_path %>
