partialize comment form

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,5 @@
 <h1>show</h1>
 
-<!--
-<%= @article %><br>
-<%= @article.title %><br>
-<%= @article.text %><br>
--->
-
 <p>
   <strong>Title:</strong>
   <%= @article.title %><br>
@@ -17,6 +11,7 @@
 </p>
 
 <h2>Comments</h2>
+<!--
 <% @article.comments.each do |comment| %>
   <p>
     <strong>Commenter:</strong>
@@ -27,6 +22,9 @@
     <%= comment.body %>
   </p>
 <% end %>
+-->
+
+<%= render @article.comments %>
 
 <h2>Add a comment:</h2>
 <%= form_for([@article, @article.comments.build]) do |f| %>
