--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,11 @@
 <%= form_for @article do |f| %>
   <% if @article.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@article.errors.count, 'error') %> 
+    <h2><%= pluralize(@article.errors.count, "error") %> 
         prohibited this article from being saved:</h2>
-
     <ul>
     <% @article.errors.full_message.each do |msg| %>
-    <li><%= msg %></li>
+      <li><%= msg %></li>
     <% end %>
     </ul>
   </div>
